<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dawid.calculator.AdvancedCalculatorActivity">


    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/display"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        app:columnCount="4"
        app:rowCount="7">

        <Button
            android:id="@+id/bksp"
            android:text="@string/bksp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@id/clear_display"
            android:text="@string/clear"
            app:layout_column="1"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@id/change_sign"
            android:text="@string/change_sign_sign"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/sin"
            android:text="@string/sin"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/cos"
            android:text="@string/cos"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/tan"
            android:text="@string/tan"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/ln"
            android:text="@string/ln"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/sqrt"
            android:text="@string/sqrt"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/power_of_two"
            android:text="@string/power_of_two"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/exponentiation"
            android:text="@string/exponentiation"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/log"
            android:text="@string/log"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <Button
            android:id="@id/division"
            android:text="@string/division"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1" />

        <Button
            android:id="@id/multiplication"
            android:text="@string/multiplication"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="4"
            app:layout_rowWeight="1" />

        <Button
            android:id="@id/subtraction"
            android:text="@string/subtraction"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="5"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/zero"
            android:text="@string/_0"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="6"
            app:layout_rowWeight="1" />

        <Button
            android:id="@id/separated_button"
            android:text="@string/separated_sign"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="6"
            app:layout_rowWeight="1" />

        <Button
            android:id="@id/equals"
            android:text="@string/equals_sign"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="6"
            app:layout_rowWeight="1" />

        <Button
            android:id="@id/addition"
            android:text="@string/addition_sign"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="6"
            app:layout_rowWeight="1" />

        <android.support.v7.widget.GridLayout
            android:id="@+id/number_pad_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:columnCount="3"
            app:layout_column="0"
            app:layout_columnSpan="3"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowSpan="3"
            app:layout_rowWeight="1"
            app:rowCount="3" />
    </android.support.v7.widget.GridLayout>

</RelativeLayout>
